--- a/QSoft.WPF.Controls.ComboButton/Themes/Generic.xaml
+++ b/QSoft.WPF.Controls.ComboButton/Themes/Generic.xaml
@@ -3,70 +3,39 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:QSoft.WPF.Controls.ComboButton">
 
-
-    <Style x:Key="bb" TargetType="Button">
-        <Setter Property="SnapsToDevicePixels"
-      Value="true" />
-        <Setter Property="OverridesDefaultStyle"
-      Value="true" />
-        <Setter Property="FocusVisualStyle"
-      Value="{x:Null}" />
-        <Setter Property="MinHeight"
-      Value="23" />
-        <Setter Property="MinWidth"
-      Value="75" />
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="Button">
-                    <Border TextBlock.Foreground="{TemplateBinding Foreground}"
-            x:Name="Border"
-            CornerRadius="2" Background="Transparent"
-            BorderThickness="1">
-                        <ContentPresenter Margin="2"
-                        HorizontalAlignment="Center"
-                        VerticalAlignment="Center"
-                        RecognizesAccessKey="True" />
-                    </Border>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-
     <Style TargetType="{x:Type local:ComboButton}">
-        <Setter Property="SnapsToDevicePixels"
-      Value="true" />
-        <Setter Property="ScrollViewer.HorizontalScrollBarVisibility"
-      Value="Auto" />
-        <Setter Property="ScrollViewer.VerticalScrollBarVisibility"
-      Value="Auto" />
-        <Setter Property="ScrollViewer.CanContentScroll"
-      Value="true" />
-        <Setter Property="MinWidth"
-      Value="120" />
-        <Setter Property="MinHeight"
-      Value="20" />
+        <Setter Property="SnapsToDevicePixels" Value="true" />
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type ComboBox}">
+                <ControlTemplate TargetType="{x:Type Selector}">
                     <Grid>
-                        <Button x:Name="button" Style="{StaticResource bb}">
-                            <ContentPresenter x:Name="ContentSite"
+                        <ContentPresenter x:Name="ContentSite"
 IsHitTestVisible="False"
-Content="{TemplateBinding SelectionBoxItem}"
-ContentTemplate="{TemplateBinding SelectionBoxItemTemplate}"
+Content="{TemplateBinding SelectedItem}"
+ContentTemplate="{TemplateBinding ItemTemplate }"
 ContentTemplateSelector="{TemplateBinding ItemTemplateSelector}"
-Margin="3,3,23,3"
-VerticalAlignment="Stretch"
-HorizontalAlignment="Left">
-                            </ContentPresenter>
+>
+                        </ContentPresenter>
+
+                        <Button x:Name="button">
+                            <Button.Style>
+                                <Style TargetType="Button">
+                                    <Setter Property="OverridesDefaultStyle" Value="True"/>
+                                    <Setter Property="Background" Value="Transparent"/>
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="Button">
+                                                <Border x:Name="Border" BorderThickness="0" Background="Transparent">
+
+                                                </Border>
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Style>
+                            </Button.Style>
                         </Button>
-
                     </Grid>
-                    <ControlTemplate.Triggers>
 
-
-
-                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
