--- a/WpfAppNET472/MainWindow.xaml
+++ b/WpfAppNET472/MainWindow.xaml
@@ -1,30 +1,64 @@
-﻿<Window x:Class="WpfAppNET472.MainWindow"
+﻿<Window
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfAppNET472"
-        mc:Ignorable="d"
+        xmlns:coll="clr-namespace:System.Collections.ObjectModel;assembly=System"
         xmlns:qcontrol="clr-namespace:QSoft.WPF.Controls.ComboButton;assembly=QSoft.WPF.Controls.ComboButton"
         xmlns:convert="clr-namespace:QSoft.WPF.ValueConvert;assembly=QSoft.WPF.ValueConvert"
+        xmlns:Collections="clr-namespace:System.Collections;assembly=mscorlib" x:Class="WpfAppNET472.MainWindow"
+        mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
     <Window.Resources>
+
+        <local:Buttond x:Key="aa" Image="/1.jpg" Text="aaa"/>
         <local:TTT2 x:Key="tt2"/>
     </Window.Resources>
     <StackPanel>
-        <RadioButton IsChecked="{Binding TTT, Converter={StaticResource tt2}, ConverterParameter=One}">AAA</RadioButton>
-        <RadioButton IsChecked="{Binding TTT, Converter={StaticResource tt2}, ConverterParameter=Two}">BBB</RadioButton>
-        <RadioButton IsChecked="{Binding TTT, Converter={StaticResource tt2}, ConverterParameter=Three}">CCC</RadioButton>
-        <qcontrol:ComboButton SelectedIndex="0">
-            <ComboBoxItem>
-                <Image Source="/1.jpg"/>
-            </ComboBoxItem>
-            <ComboBoxItem>
-                <Image Source="/2.jpg"/>
-            </ComboBoxItem>
-            <ComboBoxItem>
-                <Image Source="/3.jpg"/>
-            </ComboBoxItem>
+        <ComboBox SelectionChanged="ComboBox_SelectionChanged" SelectedIndex="0">
+            <ComboBox.ItemsSource>
+                <Collections:ArrayList>
+                    <local:Buttond Image="/1.jpg" Text="111111"/>
+                    <local:Buttond Image="/2.jpg" Text="22222"/>
+                    <local:Buttond Image="/3.jpg" Text="33333"/>
+                </Collections:ArrayList>
+            </ComboBox.ItemsSource>
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="{Binding Image}" Height="10"/>
+                        <TextBlock Text="{Binding Text}"/>
+                    </StackPanel>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+        <RadioButton IsChecked="{Binding TTT, ConverterParameter=One, Converter={StaticResource tt2}}" Content="AAA"/>
+        <RadioButton IsChecked="{Binding TTT, ConverterParameter=Two, Converter={StaticResource tt2}}" Content="BBB"/>
+        <RadioButton IsChecked="{Binding TTT, ConverterParameter=Three, Converter={StaticResource tt2}}" Content="CCC"/>
+        <qcontrol:ComboButton Width="50" VerticalAlignment="Top" SelectedIndex="0">
+            <Image Source="/1.jpg"/>
+            <Image Source="/2.jpg"/>
+            <Image Source="/3.jpg"/>
+        </qcontrol:ComboButton>
+
+        <qcontrol:ComboButton Width="50" SelectedIndex="0">
+            <qcontrol:ComboButton.ItemsSource>
+                <Collections:ArrayList>
+                    <local:Buttond Image="/1.jpg" Text="111111"/>
+                    <local:Buttond Image="/2.jpg" Text="22222"/>
+                    <local:Buttond Image="/3.jpg" Text="33333"/>
+                </Collections:ArrayList>
+            </qcontrol:ComboButton.ItemsSource>
+            <qcontrol:ComboButton.ItemTemplate>
+                <DataTemplate>
+                    <StackPanel Orientation="Horizontal">
+                        <Image Source="{Binding Image}" Height="10"/>
+                        <TextBlock Text="{Binding Text}"/>
+                    </StackPanel>
+                </DataTemplate>
+            </qcontrol:ComboButton.ItemTemplate>
+
         </qcontrol:ComboButton>
     </StackPanel>
 </Window>
