--- a/Wpf_WebView2/MainWindow.xaml
+++ b/Wpf_WebView2/MainWindow.xaml
@@ -25,6 +25,9 @@
 
             </Grid>
         </TabItem>
+        <TabItem Header="Html">
+            <local:WebViewHtml/>
+        </TabItem>
         <TabItem Header="Reactjs">
             <local:WebViewReactjs/>
         </TabItem>
