--- a/Wpf_WebView2/WebViewReactjs.xaml
+++ b/Wpf_WebView2/WebViewReactjs.xaml
@@ -13,9 +13,19 @@
             <RowDefinition Height="Auto"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
+        
         <StackPanel Orientation="Horizontal">
+            
             <Button x:Name="button_alert" Click="button_alert_Click">alert</Button>
         </StackPanel>
-        <webview2:WebView2 WebMessageReceived="webview2_WebMessageReceived" x:Name="webview2" Grid.Row="1"/>
+        <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <TextBox Text="{Binding ReceiveString}"/>
+            <webview2:WebView2 WebMessageReceived="webview2_WebMessageReceived" x:Name="webview2" Grid.Row="1"/>
+
+        </Grid>
     </Grid>
 </UserControl>
