--- a/QSoft.WPF.TreeListViewT/App.xaml
+++ b/QSoft.WPF.TreeListViewT/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="WpfApp_TreeView.App"
+﻿<Application x:Class="QSoft.WPF.TreeListViewT.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WpfApp_TreeView"
+             xmlns:local="clr-namespace:QSoft.WPF.TreeListViewT"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
