--- a/QSoft.WPF.TreeListViewT/TreeListView1.xaml
+++ b/QSoft.WPF.TreeListViewT/TreeListView1.xaml
@@ -1,16 +1,14 @@
-﻿<UserControl x:Class="WpfApp1.TreeListView1"
+﻿<UserControl x:Class="QSoft.WPF.TreeListViewT.TreeListView1"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WpfApp1"
+             xmlns:local="clr-namespace:QSoft.WPF.TreeListViewT"
              mc:Ignorable="d" 
-                          xmlns:qtreelist ="clr-namespace:QSoft.WPF.TreeListView;assembly=QSoft.WPF.TreeListView"
-        xmlns:region="clr-namespace:QSoft.WPF.MVVM.Region"
+             xmlns:qtreelist ="clr-namespace:QSoft.WPF.TreeListView;assembly=QSoft.WPF.TreeListView"
 
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
-        <local:Enum2RadioButton x:Key="aas"/>
         <Style x:Key="ExpandCollapseToggleStyle" TargetType="{x:Type ToggleButton}">
             <Setter Property="Focusable"  Value="False"/>
             <Setter Property="Width"      Value="19"/>
@@ -153,7 +151,6 @@
         <DataTemplate x:Key="item1">
             <TextBlock Text="{Binding Name}" />
         </DataTemplate>
-        <local:TestItemSelector x:Key="ss" Group1="{StaticResource group1}" Item1="{StaticResource item1}"/>
         <DataTemplate x:Key="opgroup">
             <StackPanel Orientation="Horizontal">
                 <Button>Add item</Button>
@@ -167,6 +164,7 @@
             </StackPanel>
         </DataTemplate>
         <local:TestItemSelector x:Key="ss1" Group1="{StaticResource opgroup}" Item1="{StaticResource opitem}"/>
+
         <Style x:Key="ExpandCollapseToggleStyleaa" TargetType="ToggleButton">
             <Setter Property="Focusable"  Value="False"/>
             <!--<Setter Property="Width"      Value="19"/>
@@ -222,12 +220,6 @@
             <ColumnDefinition/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <StackPanel>
-            <RadioButton IsChecked="{Binding AAs, Converter={StaticResource aas}, ConverterParameter=100}">One</RadioButton>
-            <RadioButton IsChecked="{Binding AAs, Converter={StaticResource aas}, ConverterParameter=101}">Two</RadioButton>
-            <RadioButton IsChecked="{Binding AAs, Converter={StaticResource aas}, ConverterParameter=102}">Three</RadioButton>
-            <ContentControl Background="Red" Height="100" region:ContentControlRegion.Name="aaa"/>
-        </StackPanel>
         <local:TreeListView Visibility="Collapsed" x:Name="_list" ItemsSource="{Binding Children}"  BorderThickness="2">
             <local:TreeListView.ItemTemplate >
                 <HierarchicalDataTemplate ItemsSource="{Binding Children}" >
@@ -300,7 +292,7 @@
                 </GridView>
             </qtreelist:TreeListView.View>
         </qtreelist:TreeListView>-->
-        <qtreelist:TreeListView x:Name="qtreelistview1" Grid.Column="2">
+        <!--<qtreelist:TreeListView x:Name="qtreelistview1" Grid.Column="2">
             <qtreelist:TreeListView.ItemTemplate >
                 <HierarchicalDataTemplate 
                     ItemTemplateSelector="{StaticResource ss}" 
@@ -311,7 +303,7 @@
             <qtreelist:TreeListView.View>
                 <GridView>
                     <GridView.Columns>
-                        <!--<GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" />-->
+                        --><!--<GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" />--><!--
                         <GridViewColumn Header="Name">
                             <GridViewColumn.CellTemplate>
                                 <DataTemplate>
@@ -323,7 +315,7 @@
                     </GridView.Columns>
                 </GridView>
             </qtreelist:TreeListView.View>
-        </qtreelist:TreeListView>
+        </qtreelist:TreeListView>-->
     </Grid>
 
 </UserControl>
