--- a/WpfApp_TestObejctBinding/App.xaml
+++ b/WpfApp_TestObejctBinding/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="WpfApp_MVVM_Multi.App"
+﻿<Application x:Class="WpfApp_TestObejctBinding.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:WpfApp_MVVM_Multi"
+             xmlns:local="clr-namespace:WpfApp_TestObejctBinding"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
