--- a/QSoft.WPF.PanelT/MainWindow.xaml
+++ b/QSoft.WPF.PanelT/MainWindow.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         SnapsToDevicePixels="True"
         xmlns:panel="clr-namespace:QSoft.WPF.Panel;assembly=QSoft.WPF.Panel"
-        Title="MainWindow" Height="450" Width="900">
+        Title="MainWindow" Height="450" Width="300">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -15,12 +15,12 @@
         </Grid.RowDefinitions>
         <local:DpiDecorator>
             <panel:FlexPanel x:Name="flexpanel" Background="Pink" Padding="0,0,0,0" JustifyContent="{Binding JustifyContent}" AlignItems="{Binding AlignItem}">
-                <Rectangle Width="50" Height="50" Fill="Red" Stroke="Black" StrokeThickness="1"/>
+                <!--<Rectangle Width="50" Height="50" Fill="Red" Stroke="Black" StrokeThickness="1"/>
                 <Rectangle Width="100" Height="100" Fill="Green" Stroke="Black" StrokeThickness="1"/>
-                <Rectangle Width="200" Height="200" Fill="Blue" Stroke="Black" StrokeThickness="1"/>
-                <Button>A</Button>
-                <Button>B</Button>
-                <Button>C</Button>
+                <Rectangle Width="200" Height="200" Fill="Blue" Stroke="Black" StrokeThickness="1"/>-->
+                <Button Click="Button_Click">A</Button>
+                <Button Click="Button_Click">B</Button>
+                <Button Click="Button_Click">C</Button>
             </panel:FlexPanel>
         </local:DpiDecorator>
         <StackPanel Orientation="Horizontal" Grid.Row="1">
