--- a/QSoft.WPF.PanelT/MainWindow.xaml
+++ b/QSoft.WPF.PanelT/MainWindow.xaml
@@ -8,47 +8,54 @@
         SnapsToDevicePixels="True"
         xmlns:panel="clr-namespace:QSoft.WPF.Panel;assembly=QSoft.WPF.Panel"
         Title="MainWindow" Height="480" Width="640">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition/>
-            <RowDefinition Height="Auto"/>
-        </Grid.RowDefinitions>
-        <!--<local:DpiDecorator>
-            <panel:FlexPanel x:Name="flexpanel" Background="Pink" Padding="0,0,0,0" Visibility="Visible">
-                <Rectangle Width="50" Height="50" Fill="Red" Stroke="Black" StrokeThickness="1"/>
-                <Rectangle Width="100" Height="100" Fill="Green" Stroke="Black" StrokeThickness="1"/>
-                <Rectangle Width="200" Height="200" Fill="Blue" Stroke="Black" StrokeThickness="1"/>
-                --><!--<Button Click="Button_Click">A</Button>
-                <Button Click="Button_Click">B</Button>
-                <Button Click="Button_Click">C</Button>--><!--
-            </panel:FlexPanel>
-        </local:DpiDecorator>-->
-        <local:DpiDecorator VerticalAlignment="Top">
-            <!--<panel:FlexPanel FlexDirection="Column" Gap="0">
-                <TextBlock Text="Test"/>
-                <panel:FlexPanel Gap="0" Padding="0,0,0,0">
-                    <Button>Fun1</Button>
-                    <Button>Fun2</Button>
-                </panel:FlexPanel>
-            </panel:FlexPanel>-->
-            <panel:FlexPanel FlexDirection="Column" Gap="0">
-                <Button Height="50">Fun11</Button>
-                <panel:FlexPanel Gap="0" Padding="0,0,0,0" >
-                    <Button Height="100">Fun1</Button>
-                    <Button Height="100">Fun2</Button>
-                </panel:FlexPanel>
-            </panel:FlexPanel>
-            
-        </local:DpiDecorator>
-        <StackPanel Orientation="Horizontal" Grid.Row="1">
-            <ComboBox ItemsSource="{Binding JustifyContents}" SelectedItem="{Binding JustifyContent, ElementName=flexpanel}" x:Name="combobox_justifycontent"/>
-            <ComboBox ItemsSource="{Binding AlignItems}" SelectedItem="{Binding AlignItems, ElementName=flexpanel}"/>
-            <ComboBox ItemsSource="{Binding FlexDirections}" SelectedItem="{Binding FlexDirection, ElementName=flexpanel}"/>
-            <TextBox Text="{Binding Padding, ElementName=flexpanel}"/>
-            <TextBox Text="{Binding Gap, ElementName=flexpanel}">
+    <TabControl>
+        <TabItem Header="Basic1">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <local:DpiDecorator>
+                    <panel:FlexPanel x:Name="flexpanel" Background="Pink" Padding="0,0,0,0" Visibility="Visible">
+                        <!--<Rectangle Width="50" Height="50" Fill="Red" Stroke="Black" StrokeThickness="1"/>
+                        <Rectangle Width="100" Height="100" Fill="Green" Stroke="Black" StrokeThickness="1"/>
+                        <Rectangle Width="200" Height="200" Fill="Blue" Stroke="Black" StrokeThickness="1"/>
+                        <Button Click="Button_Click">A</Button>
+                        <Button Click="Button_Click">B</Button>
+                        <Button Click="Button_Click">C</Button>-->
+                        <TextBlock Text="Title"/>
+                        <CheckBox>AA</CheckBox>
+                        <Button>Button</Button>
+
+                    </panel:FlexPanel>
+                </local:DpiDecorator>
                 
-            </TextBox>
-        </StackPanel>
-    </Grid>
+                <StackPanel Orientation="Horizontal" Grid.Row="1">
+                    <ComboBox ItemsSource="{Binding JustifyContents}" SelectedItem="{Binding JustifyContent, ElementName=flexpanel}" x:Name="combobox_justifycontent"/>
+                    <ComboBox ItemsSource="{Binding AlignItems}" SelectedItem="{Binding AlignItems, ElementName=flexpanel}"/>
+                    <ComboBox ItemsSource="{Binding FlexDirections}" SelectedItem="{Binding FlexDirection, ElementName=flexpanel}"/>
+                    <TextBox Text="{Binding Padding, ElementName=flexpanel}"/>
+                    <TextBox Text="{Binding Gap, ElementName=flexpanel}">
+
+                    </TextBox>
+                </StackPanel>
+            </Grid>
+
+        </TabItem>
+        <TabItem Header="com">
+            <local:DpiDecorator>
+                <panel:FlexPanel x:Name="flexpanle_title" VerticalAlignment="Top" FlexDirection="Column" Gap="8">
+                    <panel:FlexPanel JustifyContent="SpaceBetween">
+                        <TextBlock Text="Title"/>
+                        <CheckBox>AA</CheckBox>
+                    </panel:FlexPanel>
+                    <panel:FlexPanel x:Name="flexpanel_bb" JustifyContent="SpaceAround" Gap="8" Padding="0,0,0,0" >
+                        <Button Height="100">Fun1</Button>
+                        <Button Height="100">Fun2</Button>
+                    </panel:FlexPanel>
+                </panel:FlexPanel>
+            </local:DpiDecorator>
+        </TabItem>
+    </TabControl>
 
 </Window>
